--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simpleNodeJsExample",
+  "name": "simpleNodeJsCRUDExample",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
