ejs instead of jade

--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "acorn": "^2.5.2",
     "body-parser": "^1.14.1",
     "bookshelf": "^0.8.2",
-    "express": "*",
-    "jade": "*",
+    "ejs": "^2.3.4",
+    "express": "^4.13.3",
+    "express-ejs-layouts": "^2.0.0",
+    "jade": "^1.11.0",
     "knex": "^0.8.6",
     "lodash": "^3.10.1",
     "mysql": "^2.9.0",
