--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jade": "^1.11.0",
     "knex": "^0.8.6",
     "lodash": "^3.10.1",
+    "memcached": "^2.2.0",
     "mysql": "^2.9.0",
     "nib": "*",
     "router": "^1.1.3",
