simple chat on sockets.io

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nib": "*",
     "q": "^1.4.1",
     "router": "^1.1.3",
+    "socket.io": "^1.3.7",
     "stylus": "*",
     "sugar": "^1.4.1",
     "sugarjs": "^0.1.0",
