--- a/package.json
+++ b/package.json
@@ -4,29 +4,30 @@
   "private": true,
   "dependencies": {
     "acorn": "^2.5.2",
+    "async": "*",
+    "bcrypt-nodejs": "*",
     "body-parser": "^1.14.1",
-    "cookie-parser": "*",
     "bookshelf": "^0.8.2",
+    "cookie-parser": "*",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "express-ejs-layouts": "^2.0.0",
+    "express-require-routes": "0.0.1",
     "express-session": "*",
-    "bcrypt-nodejs": "*",
     "jade": "^1.11.0",
     "knex": "^0.8.6",
     "lodash": "^3.10.1",
     "memcached": "^2.2.0",
     "mysql": "^2.9.0",
     "nib": "*",
+    "passport": "*",
+    "passport-local": "*",
     "q": "^1.4.1",
     "router": "^1.1.3",
     "socket.io": "^1.3.7",
     "stylus": "*",
     "sugar": "^1.4.1",
     "sugarjs": "^0.1.0",
-    "when": "^3.7.4",
-    "passport": "*",
-    "passport-local": "*",
-    "async": "*"
+    "when": "^3.7.4"
   }
 }
