--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.14.1",
     "bookshelf": "^0.8.2",
     "cookie-parser": "*",
+    "crypto": "0.0.3",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "express-ejs-layouts": "^2.0.0",
@@ -18,6 +19,8 @@
     "knex": "^0.8.6",
     "lodash": "^3.10.1",
     "memcached": "^2.2.0",
+    "mime": "^1.3.4",
+    "multer": "^1.1.0",
     "mysql": "^2.9.0",
     "nib": "*",
     "passport": "*",
